Update Current Job

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     				<div class="col-lg-7">
     					<div class="content">
 							<h4 class="title title-left">I Am a Developer, Automation Engineer and Software Analyst</h4>
-    						<p>Hi there, my name is <span>Wesley Hoang</span> but I also go by <span>Wes</span>. I am a software engineer, who graduated at the University of California, Irvine in 2018 with a Bachelor Degree of Computer Science. Currently, I am a Software QA Analyst II at Experian, specilizing in Automation.</p>
+    						<p>Hi there, my name is <span>Wesley Hoang</span> but I also go by <span>Wes</span>. I am a software engineer, who graduated at the University of California, Irvine in 2018 with a Bachelor Degree of Computer Science. Currently, I am a Software Engineer at Twitter, specilizing in Automation.</p>
     						<p>Aside from my daily job, I love to dance. Since high school, I was exposed to hip hop and I let my passion grew throughout my years in college and even until now. While in college, I directed an exhibition dance team called Level V Origins while danced for various competitive dance teams such as Common Ground and Theorists. Some of my other hobbies include photography, car, music and soccer (I am a huge Liverpool fan). I am also an individual investor so talk to me about the stock market or recommend me your favorite book!</p>
 
     						<div class="social-icon">
@@ -185,6 +185,14 @@
     						<span class="icon icon-briefcase"></span><br>
     						<h5 class="title title-left">Experience</h5>
     						<ul>
+								<li>
+    								<h6>Twitter</h6>
+    								<p>Software Engineer (L3)</p>
+    							</li>
+								<li>
+    								<h6>Apple</h6>
+    								<p>Tools & Automation Engineer II</p>
+    							</li>
     							<li>
     								<h6>Experian</h6>
     								<p>Software QA Analyst II</p>
